--- a/css/main.css
+++ b/css/main.css
@@ -695,13 +695,10 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  opacity: 1;
-  visibility: visible;
 }
 
 .hero.await-auth {
-  opacity: 0;
-  visibility: hidden;
+  display: none;
 }
 
 .hero .overlay {
