--- a/css/main.css
+++ b/css/main.css
@@ -875,7 +875,7 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
   padding: 7px 0;
   display: grid;
   grid-template-columns: auto 2fr;
-  gap: 10px;
+  gap: 9px;
 }
 
 .post:first-child {
@@ -902,7 +902,7 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
 .post-col-2 {
   display: grid;
   grid-auto-flow: row;
-  gap: 9px;
+  gap: 0;
 }
 
 .author {
