--- a/css/main.css
+++ b/css/main.css
@@ -921,9 +921,27 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
   line-height: 1.5;
 }
 
-.post-img {
-  border-radius: 15px;
-  border: 1.8px solid var(--lshade);
+.post-body img.expanded {
+  max-height: fit-content!important;
+  object-fit: fill;
+  border: none!important;
+  border-radius: 0!important;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 10;
+}
+
+.post-body:has(img.expanded)::after {
+  content: "";
+  background: var(--dark);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9;
 }
 
 .post-analytics {
@@ -1016,25 +1034,6 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
 
 .post:not(:last-child) {
   border-bottom: 1px solid var(--lshade);
-}
-
-.auth-content .feed .edit-post {
-  background: var(--primary);
-  color: var(--light);
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  position: fixed;
-  bottom: 50px;
-  right: 5%;
-}
-
-.auth-content .feed .edit-post span {
-  font-size: var(--xl);
 }
 
 .post-comments-overlay {
