--- a/css/main.css
+++ b/css/main.css
@@ -1615,7 +1615,7 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
     display: grid;
     align-content: start;
     grid-template-columns: 70% 30%;
-    gap: var(--sm);
+    gap: 3%;
   }
 
   .auth-content .feed {
