--- a/css/main.css
+++ b/css/main.css
@@ -1607,7 +1607,7 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
   }
 
   .auth-content .feed {
-    height: 100vh;
+    min-height: 100vh;
     border-right: 2px solid var(--lshade);
   }
 
