--- a/css/main.css
+++ b/css/main.css
@@ -1504,7 +1504,7 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
 
 /* Medium screens */
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 615px) {
   header {
     height: 60px;
     padding: 0 20%;
@@ -1524,6 +1524,12 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
   
   .posts-container {
     padding: 0 !important;
+  }
+
+  .post-body img.expanded {
+    max-width: 600px;
+    object-fit: unset;
+    object-position: unset;
   }
 }
 
