--- a/css/main.css
+++ b/css/main.css
@@ -1513,6 +1513,10 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
   .auth-content.active {
     padding: 0 10%;
   }
+
+  .posts-container {
+    padding: 0 !important;
+  }
 }
 
 @media screen and (min-width: 768px) {
