--- a/css/main.css
+++ b/css/main.css
@@ -939,6 +939,7 @@ html:has(.posts-wrapper.saved-posts.active) .posts-container {
   top: 0;
   left: 0;
   z-index: 9;
+  overflow-y: auto;
 }
 
 .close-expandedImgView {
