--- a/css/main.css
+++ b/css/main.css
@@ -782,7 +782,7 @@ main {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 100% 0;
+  grid-template-columns: 0 100% 0;
   gap: 0;
   overflow-x: hidden;
   overflow-y: auto;
@@ -1638,12 +1638,13 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
     padding: 0 1% 0 15%;
     display: grid;
     align-content: start;
-    grid-template-columns: 70% 29%;
+    grid-template-columns: 29% 70% 29%;
     gap: 1%;
   }
 
   .auth-content .feed {
     min-height: 100vh;
+    border-left: 1px solid var(--lshade);
     border-right: 1px solid var(--lshade);
   }
 
