--- a/css/main.css
+++ b/css/main.css
@@ -1635,7 +1635,7 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
   }
 
   .auth-content.active {
-    padding: 0 1% 0 15%;
+    padding: 0 1%;
     display: grid;
     align-content: start;
     grid-template-columns: 29% 70% 29%;
