--- a/css/main.css
+++ b/css/main.css
@@ -1643,6 +1643,7 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
   }
 
   .auth-content .feed {
+    width: fit-content;
     min-height: 100vh;
     border-left: 1px solid var(--lshade);
     border-right: 1px solid var(--lshade);
@@ -1655,6 +1656,7 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
   .post {
     max-width: 600px;
     padding: 10px 20px 10px 0;
+    margin: auto;
     gap: var(--md2);
   }
 
