--- a/css/main.css
+++ b/css/main.css
@@ -1638,7 +1638,7 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
     padding: 0 1%;
     display: grid;
     align-content: start;
-    grid-template-columns: 15% 70% 15%;
+    grid-template-columns: 1fr 2fr 1fr;
     gap: 1%;
   }
 
