--- a/css/main.css
+++ b/css/main.css
@@ -782,7 +782,7 @@ main {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 0 100% 0;
+  grid-template-columns: 0 3fr 0;
   gap: 0;
   overflow-x: hidden;
   overflow-y: auto;
