--- a/css/main.css
+++ b/css/main.css
@@ -801,7 +801,7 @@ main {
 }
 
 .auth-content .posts-container {
-  width: 100%;
+  max-width: 600px;
   height: fit-content;
   padding: 0 5%;
   display: grid;
@@ -1524,7 +1524,6 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
   }
 
   .posts-container {
-    width: 100%;
     padding: 0 !important;
   }
 }
@@ -1543,7 +1542,6 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
   }
 
   .posts-container {
-    width: 100%;
     padding: 0 !important;
   }
 }
@@ -1570,7 +1568,6 @@ html:has(.post-comments-overlay.active) *:not(.post-comments) {
   }
   
   .posts-container {
-    width: 100%;
     padding: 0 !important;
   }
 
