--- a/css/main.css
+++ b/css/main.css
@@ -794,6 +794,7 @@ main {
 }
 
 .auth-content .feed {
+  width: 100%;
   height: fit-content;
   display: grid;
   grid-auto-flow: row;
@@ -801,7 +802,7 @@ main {
 }
 
 .auth-content .posts-container {
-  width: 600px;
+  width: 100%;
   height: fit-content;
   padding: 0 5%;
   display: grid;
